2007-11-19  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/ellipse.hg: Add default values to the 
	constructor parameters.
	* goocanvas/src/rect.hg: Remove the default constructor, 
	because we already have a constructor with all default 
	parameter values.

	* configure.in:
	* examples/Makefile.am:
	* examples/drag_to_canvas/examplewindow.cc:
	* examples/drag_to_canvas/examplewindow.h:
	* examples/drag_to_canvas/main.cc: Added an example of 
	dragging items from a toolbar to a canvas, though this 
	does not work yet.

2007-11-09  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Removed cairomm and glibmm checks.
	gtkmm should be enough.

2007-11-09  Murray Cumming  <murrayc@murrayc.com>

	* tools/m4/Makefile.am: Correct the install location 
	of the .m4 files.
	* goocanvas/goocanvasmm-1.0.pc.in: Mention the include 
	directory of the architecture-specific headers.
	Bug #489865 (Yaakov Selkovitz)

0.4.0:

2007-10-30  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* goocanvas/goocanvasmm.h:
	* goocanvas/src/Makefile_list_of_hg.am_fragment:
	* goocanvas/src/table.ccg:
	* goocanvas/src/table.hg: Wrapped GooCanvasTable, 
	though we need some API for the child properties.
	* examples/Makefile.am:
	* examples/simple/: Cleaned up the synax a little.
	* examples/table/: New example.

2007-10-28  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/canvas.hg:
	* goocanvas/src/item.hg: Make the properties public, 
	not protected.

2007-10-25  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/canvas.ccg:
	* goocanvas/src/canvas.hg: Added get_bounds(Bounds&) 
	method overload.

0.3.0:

2007-10-23  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/canvas.hg: Wrapped the properties.

2007-10-22  Murray Cumming  <murrayc@murrayc.com>

	* goocanvas/src/image.hg: Added a create() method to 
	match the new constructor added inthe last commit.

2007-10-22  Murray Cumming  <murrayc@murrayc.com>
